--- a/app/src/main/res/layout/message_text_item.xml
+++ b/app/src/main/res/layout/message_text_item.xml
@@ -6,20 +6,12 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:id="@+id/block"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
-
-    <TextView
         android:layout_marginTop="32dp"
         android:id="@+id/message_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Ты помни, я тебя в покое не оставлю, ты меня понял???"
-        app:layout_constraintTop_toBottomOf="@id/block"
-        app:layout_constraintStart_toStartOf="@id/block"
-        android:textSize="20sp"
-        android:textStyle="bold"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="16sp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
